# sdatools

./: LICENSE  README.md  pyproject.toml  requirements.txt
case_studies/: total_return_index.ipynb
case_studies/total_return_index/: total_return_index.ipynb
sandbox/: _lazy_imports.py  jsu.ggb
src/sdatools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sdatools/core/: README.md  constants.py  functions.py  summary_statistics.py  symbolic_function.py  types.py  utils.py
src/sdatools/data_visualisation/: README.md  __init__.py  histogram.py  qq_plot.py
src/sdatools/distributions/: README.md  __init__.py  base_distribution.py
src/sdatools/functions/: function.py
src/sdatools/numerical_methods/: README.md  root_finding.py
src/sdatools/parameter_estimation/: README.md  method_of_moments.py
src/sdatools/statistics/: qq_plot.py
src/sdatools/validation/: __init__.py
src/stats_and_data_analysis_tools/core/: erf.py  function.py
src/stats_and_data_analysis_tools/distributions/: distribution.py
tests/: test_function.py  test_histogram.py  test_method_of_moments.py  test_normal_distribution.py  test_numeric_function.py  test_qq_plot.py  test_quadrature.py  test_sample_from_distributions.py  test_sampling.py  test_symbolic_function.py
tests/core/: test_utils.py
tests/data_visualisation/: test_histogram.py  test_qq_plot.py
tests/distributions/: test_jsu.py  test_normal_distribution.py  test_sampling.py
tests/numerical_methods/: test_quadrature.py
tests/parameter_estimation/: test_method_of_moments.py
tests/validation/: test_ks_test.py
(+44 files in other folders)
