[project]
name = "sdatools"
version = "0.1.0"
authors = [
  { name="Michael J. Fuller", email="michaeljosephfuller@gmail.com" },
]
description = "A collection of tools for statistics and data analysis"
readme = "README.md"
requires-python = ">=3.10.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/itsmikefuller/stats_and_data_analysis_tools"
Issues = "https://github.com/itsmikefuller/stats_and_data_analysis_tools/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"